# pydantic-ssm-settings

./: .codecov.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  dotenv_to_ssm.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  main.yaml  publish.yaml
pydantic_ssm_settings/: __init__.py  settings.py  setup.cfg  source.py  ssm.py
pydantic_ssm_settings/scripts/: cli.py
src/: __init__.py  ssm.py
tests/: conftest.py  requirements-linting.txt  requirements-testing.txt  test_main.py
