[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pydantic-ssm-settings"
version = "0.0.1"
description = "Replace Pydantic's builtin Secret Support with a configuration provider that loads parameters from AWS Systems Manager Parameter Store."
authors = ["Anthony Lukach <anthonylukach@gmail.com>"]
maintainers = ["Anthony Lukach <anthonylukach@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/developmentseed/pydantic-ssm-settings/"

[tool.poetry.dependencies]
python = "^3.7"
"boto3" = "^1.21.45"
pydantic = "^1.6.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.9.3"
mypy = "^0.910"
boto3-stubs = {extras = ["ssm"], version = "^1.21.45"}
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
moto = {extras = ["all"], version = "^2.2.19"}
flake9 = "^3.8.3"

[tool.semantic_release]
# https://python-semantic-release.readthedocs.io/en/latest/configuration.html
branch = "main"
version_variable = "pydantic_ssm_settings/__init__.py:__version__"
build_command = "poetry build"

[tool.flake8]
max-line-length = 90
max-complexity = 14
ignore = ["E203", "W503"]

[tool.pytest]
testpaths = "tests"
addopts = "-p no:hypothesispytest"

[tool.isort]
line_length = 90
known_first_party = "pydantic_ssm_settings"
multi_line_output = 3
include_trailing_comma = "true"
force_grid_wrap = 0
combine_as_imports = "true"

[tool.mypy]
files="pydantic_ssm_settings"
python_version = 3.9
show_error_codes = "True"